--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Help.md
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -9,3 +10,18 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+*.classpath
+*.project
+*.settings/*
+.github
+*.project
+*.classpath
+
+application/.classpath
+application/.project
+application/.settings/
+application/pom.xml
+domain/.classpath
+domain/.project
+domain/.settings/
