--- a/application/pom.xml
+++ b/application/pom.xml
@@ -1,10 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.techendear</groupId>
-    <artifactId>ebill-api</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>application</artifactId>
-  <name>application</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.techendear</groupId>
+		<artifactId>ebill-api</artifactId>
+		<version>${version}</version>
+	</parent>
+	<artifactId>application</artifactId>
+	<name>application</name>
+	<dependencies>
+		<dependency>
+			<groupId>com.techendear</groupId>
+			<artifactId>domain</artifactId>
+			<version>${version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techendear</groupId>
+			<artifactId>repository</artifactId>
+			<version>${version}</version>
+		</dependency>
+	</dependencies>
 </project>
