Created User API

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -20,5 +20,34 @@
 			<artifactId>repository</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.techendear</groupId>
+			<artifactId>service</artifactId>
+			<version>${version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techendear</groupId>
+			<artifactId>controller</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
+	<properties>
+		<java.version>11</java.version>
+	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
