--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.profiles.active=dev
+
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+springdoc.swagger-ui.path=/api-docs.html
+springdoc.swagger-ui.operationsSorter=method
