--- a/application/pom.xml
+++ b/application/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>controller</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.techendear</groupId>
+			<artifactId>common</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<java.version>11</java.version>
