--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,11 +1,23 @@
 spring.profiles.active=dev
 
-# H2 Database configuration
+#spring.datasource.url=jdbc:mysql://localhost:3306/ebill?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=Romio1993
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto = create
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=tru
 
 springdoc.swagger-ui.path=/api-docs.html
 springdoc.swagger-ui.operationsSorter=method
+
+
