--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,6 @@
 		<module>repository</module>
 		<module>service</module>
 		<module>controller</module>
+		<module>common</module>
 	</modules>
 </project>
