--- a/service/pom.xml
+++ b/service/pom.xml
@@ -21,5 +21,10 @@
 			<artifactId>repository</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.techendear</groupId>
+			<artifactId>common</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 </project>
