--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -1,12 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.techendear</groupId>
-    <artifactId>ebill-api</artifactId>
-    <version>${version}</version>
-  </parent>
-  <artifactId>domain</artifactId>
-  <name>domain</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.techendear</groupId>
+		<artifactId>ebill-api</artifactId>
+		<version>${version}</version>
+	</parent>
+	<artifactId>domain</artifactId>
+	<name>domain</name>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -20,6 +22,12 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>com.techendear</groupId>
+			<artifactId>common</artifactId>
+			<version>${version}</version>
 		</dependency>
 	</dependencies>
 	<build>
