--- a/service/pom.xml
+++ b/service/pom.xml
@@ -26,5 +26,9 @@
 			<artifactId>common</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 </project>
