--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -22,5 +22,5 @@ springdoc.swagger-ui.operationsSorter=method
 
 server.error.include-stacktrace=never
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
-spring.jackson.date-format=MM-dd-yyyy HH:mm:ss
+#spring.jackson.date-format=MM-dd-yyyy HH:mm:ss
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
